0000519: Patch to set proper RPATH's for system wide installation on Linux
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5270 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/data/examples/CMakeLists.txt
+++ b/data/examples/CMakeLists.txt
@@ -12,7 +12,7 @@ ADD_CUSTOM_TARGET(Example_data ALL
 
 fc_copy_sources("data/examples" "Examples" ${Examples_Files})
 
-install(
+INSTALL(
     FILES
         ${Examples_Files}
     DESTINATION
