--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -59,6 +59,7 @@ if(FREECAD_BUILD_GUI)
     else(MSVC)
         set_target_properties(FreeCADMain PROPERTIES OUTPUT_NAME "FreeCAD")
         set_target_properties(FreeCADMain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+        set_target_properties(FreeCADMain PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
     endif(MSVC)
 
     if(WIN32)
@@ -99,6 +100,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(FreeCADMainCmd PROPERTIES OUTPUT_NAME "FreeCADCmd")
     set_target_properties(FreeCADMainCmd PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    set_target_properties(FreeCADMainCmd PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 if(WIN32)
@@ -140,6 +142,7 @@ else(MSVC)
     set_target_properties(FreeCADMainPy PROPERTIES OUTPUT_NAME "FreeCAD")
     set_target_properties(FreeCADMainPy PROPERTIES PREFIX "")
     set_target_properties(FreeCADMainPy PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+    set_target_properties(FreeCADMainPy PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
 if(WIN32)
@@ -178,10 +181,12 @@ if(FREECAD_BUILD_GUI)
 		set_target_properties(FreeCADGuiPy PROPERTIES SUFFIX ".pyd")
 		set_target_properties(FreeCADGuiPy PROPERTIES PREFIX "")
 		set_target_properties(FreeCADGuiPy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+                set_target_properties(FreeCADGuiPy PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 	else(MSVC)
 		set_target_properties(FreeCADGuiPy PROPERTIES OUTPUT_NAME "FreeCADGui")
 		set_target_properties(FreeCADGuiPy PROPERTIES PREFIX "")
 		set_target_properties(FreeCADGuiPy PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+                set_target_properties(FreeCADGuiPy PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 	endif(MSVC)
 
 	if(WIN32)
