--- a/src/Mod/Cam/App/CMakeLists.txt
+++ b/src/Mod/Cam/App/CMakeLists.txt
@@ -103,6 +103,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Cam PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Cam)
     set_target_properties(Cam PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(Cam PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Cam DESTINATION lib)
+INSTALL(TARGETS Cam DESTINATION lib)
