--- a/src/Mod/Cam/Gui/CMakeLists.txt
+++ b/src/Mod/Cam/Gui/CMakeLists.txt
@@ -80,6 +80,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(CamGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Cam)
     set_target_properties(CamGui PROPERTIES PREFIX "")
+    SET_TARGET_PROPERTIES(CamGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS CamGui DESTINATION lib)
+INSTALL(TARGETS CamGui DESTINATION lib)
