--- a/src/Mod/Complete/App/CMakeLists.txt
+++ b/src/Mod/Complete/App/CMakeLists.txt
@@ -38,6 +38,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Complete PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Complete)
     set_target_properties(Complete PROPERTIES PREFIX "")
+    set_target_properties(Complete PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Complete DESTINATION lib)
+INSTALL(TARGETS Complete DESTINATION lib)
