--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -85,6 +85,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Drawing PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Drawing)
     set_target_properties(Drawing PROPERTIES PREFIX "")
+    set_target_properties(Drawing PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Drawing DESTINATION lib)
+INSTALL(TARGETS Drawing DESTINATION lib)
