--- a/src/Mod/Drawing/Gui/CMakeLists.txt
+++ b/src/Mod/Drawing/Gui/CMakeLists.txt
@@ -103,6 +103,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(DrawingGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Drawing)
     set_target_properties(DrawingGui PROPERTIES PREFIX "")
+    set_target_properties(DrawingGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS DrawingGui DESTINATION lib)
+INSTALL(TARGETS DrawingGui DESTINATION lib)
