--- a/src/Mod/Import/Gui/CMakeLists.txt
+++ b/src/Mod/Import/Gui/CMakeLists.txt
@@ -56,6 +56,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(ImportGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Import)
     set_target_properties(ImportGui PROPERTIES PREFIX "")
+    set_target_properties(ImportGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS ImportGui DESTINATION lib)
+INSTALL(TARGETS ImportGui DESTINATION lib)
