--- a/src/Mod/Inspection/App/CMakeLists.txt
+++ b/src/Mod/Inspection/App/CMakeLists.txt
@@ -50,6 +50,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Inspection PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Inspection)
     set_target_properties(Inspection PROPERTIES PREFIX "")
+    set_target_properties(Inspection PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Inspection DESTINATION lib)
+INSTALL(TARGETS Inspection DESTINATION lib)
