--- a/src/Mod/Mesh/App/CMakeLists.txt
+++ b/src/Mod/Mesh/App/CMakeLists.txt
@@ -347,6 +347,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Mesh PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Mesh)
     set_target_properties(Mesh PROPERTIES PREFIX "")
+    set_target_properties(Mesh PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Mesh DESTINATION lib)
+INSTALL(TARGETS Mesh DESTINATION lib)
