--- a/src/Mod/MeshPart/App/CMakeLists.txt
+++ b/src/Mod/MeshPart/App/CMakeLists.txt
@@ -66,6 +66,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(MeshPart PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/MeshPart)
     set_target_properties(MeshPart PROPERTIES PREFIX "")
+    set_target_properties(MeshPart PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS MeshPart DESTINATION lib)
+INSTALL(TARGETS MeshPart DESTINATION lib)
