--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -178,6 +178,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(PartGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Part)
     set_target_properties(PartGui PROPERTIES PREFIX "")
+    set_target_properties(PartGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS PartGui DESTINATION lib)
+INSTALL(TARGETS PartGui DESTINATION lib)
