--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -105,6 +105,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(PartDesign PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/PartDesign)
     set_target_properties(PartDesign PROPERTIES PREFIX "")
+    set_target_properties(PartDesign PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS PartDesign DESTINATION lib)
+INSTALL(TARGETS PartDesign DESTINATION lib)
