--- a/src/Mod/PartDesign/Gui/CMakeLists.txt
+++ b/src/Mod/PartDesign/Gui/CMakeLists.txt
@@ -134,6 +134,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(PartDesignGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/PartDesign)
     set_target_properties(PartDesignGui PROPERTIES PREFIX "")
+    set_target_properties(PartDesignGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS PartDesignGui DESTINATION lib)
+INSTALL(TARGETS PartDesignGui DESTINATION lib)
