--- a/src/Mod/Points/App/CMakeLists.txt
+++ b/src/Mod/Points/App/CMakeLists.txt
@@ -59,6 +59,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Points PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Points)
     set_target_properties(Points PROPERTIES PREFIX "")
+    set_target_properties(Points PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Points DESTINATION lib)
+INSTALL(TARGETS Points DESTINATION lib)
