--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -74,6 +74,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Raytracing PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Raytracing)
     set_target_properties(Raytracing PROPERTIES PREFIX "")
+    set_target_properties(Raytracing PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Raytracing DESTINATION lib)
+INSTALL(TARGETS Raytracing DESTINATION lib)
