--- a/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/Gui/CMakeLists.txt
@@ -54,6 +54,9 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(ReverseEngineeringGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/ReverseEngineering)
     set_target_properties(ReverseEngineeringGui PROPERTIES PREFIX "")
+    set_target_properties(ReverseEngineeringGui
+                          PROPERTIES INSTALL_RPATH ${INSTALL_RPATH}
+    )
 endif(MSVC)
 
 install(TARGETS ReverseEngineeringGui DESTINATION lib)
