--- a/src/Mod/Robot/Gui/CMakeLists.txt
+++ b/src/Mod/Robot/Gui/CMakeLists.txt
@@ -162,6 +162,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(RobotGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Robot)
     set_target_properties(RobotGui PROPERTIES PREFIX "")
+    set_target_properties(RobotGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS RobotGui DESTINATION lib)
+INSTALL(TARGETS RobotGui DESTINATION lib)
