--- a/src/Mod/Sandbox/App/CMakeLists.txt
+++ b/src/Mod/Sandbox/App/CMakeLists.txt
@@ -46,6 +46,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Sandbox PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sandbox)
     set_target_properties(Sandbox PROPERTIES PREFIX "")
+    set_target_properties(Sandbox PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Sandbox DESTINATION lib)
+INSTALL(TARGETS Sandbox DESTINATION lib)
