--- a/src/Mod/Sandbox/Gui/CMakeLists.txt
+++ b/src/Mod/Sandbox/Gui/CMakeLists.txt
@@ -57,6 +57,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(SandboxGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sandbox)
     set_target_properties(SandboxGui PROPERTIES PREFIX "")
+    set_target_properties(SandboxGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS SandboxGui DESTINATION lib)
+INSTALL(TARGETS SandboxGui DESTINATION lib)
