--- a/src/Mod/Sketcher/App/CMakeLists.txt
+++ b/src/Mod/Sketcher/App/CMakeLists.txt
@@ -121,6 +121,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Sketcher PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Sketcher)
     set_target_properties(Sketcher PROPERTIES PREFIX "")
+    set_target_properties(Sketcher PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Sketcher DESTINATION lib)
+INSTALL(TARGETS Sketcher DESTINATION lib)
