--- a/src/Mod/Start/Gui/CMakeLists.txt
+++ b/src/Mod/Start/Gui/CMakeLists.txt
@@ -70,6 +70,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(StartGui PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Start)
     set_target_properties(StartGui PROPERTIES PREFIX "")
+    set_target_properties(StartGui PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS StartGui DESTINATION lib)
+INSTALL(TARGETS StartGui DESTINATION lib)
