--- a/src/Mod/Test/CMakeLists.txt
+++ b/src/Mod/Test/CMakeLists.txt
@@ -20,7 +20,7 @@ ADD_CUSTOM_TARGET(Test ALL
 
 fc_copy_sources("Mod/Test" "Test" ${Test_SRCS})
 
-install(
+INSTALL(
     FILES
         ${Test_SRCS}
     DESTINATION
