--- a/src/Mod/Web/CMakeLists.txt
+++ b/src/Mod/Web/CMakeLists.txt
@@ -3,7 +3,7 @@ if(FREECAD_BUILD_GUI)
     add_subdirectory(Gui)
 endif(FREECAD_BUILD_GUI)
 
-install(
+INSTALL(
     FILES
         Init.py
         InitGui.py
