--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -79,6 +79,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(Fem PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/Fem)
     set_target_properties(Fem PROPERTIES PREFIX "")
+    set_target_properties(Fem PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS Fem DESTINATION lib)
+INSTALL(TARGETS Fem DESTINATION lib)
