--- a/src/Mod/ReverseEngineering/App/CMakeLists.txt
+++ b/src/Mod/ReverseEngineering/App/CMakeLists.txt
@@ -47,6 +47,7 @@ elseif(MINGW)
 else(MSVC)
     set_target_properties(ReverseEngineering PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Mod/ReverseEngineering)
     set_target_properties(ReverseEngineering PROPERTIES PREFIX "")
+    set_target_properties(ReverseEngineering PROPERTIES INSTALL_RPATH ${INSTALL_RPATH})
 endif(MSVC)
 
-install(TARGETS ReverseEngineering DESTINATION lib)
+INSTALL(TARGETS ReverseEngineering DESTINATION lib)
