--- a/src/Mod/Sandbox/CMakeLists.txt
+++ b/src/Mod/Sandbox/CMakeLists.txt
@@ -4,10 +4,10 @@ if(FREECAD_BUILD_GUI)
 	add_subdirectory(Gui)
 endif(FREECAD_BUILD_GUI)
 
-install(
-	FILES
-		Init.py
-		InitGui.py
-	DESTINATION
-		Mod/Sandbox
+INSTALL(
+    FILES
+        Init.py
+        InitGui.py
+    DESTINATION
+        Mod/Sandbox
 )
