Changing some filenames in Draft to more unified naming scheme
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5276 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/CMakeLists.txt
+++ b/src/Mod/Draft/CMakeLists.txt
@@ -3,8 +3,8 @@ SET(Draft_SRCS
     Init.py
     InitGui.py
     Draft.py
-    draftTools.py
-    draftGui.py
+    DraftTools.py
+    DraftGui.py
     WorkingPlane.py
     importDXF.py
     importOCA.py
