+ separated Draft Snap and Trackers into their own files
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5277 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/CMakeLists.txt
+++ b/src/Mod/Draft/CMakeLists.txt
@@ -5,6 +5,8 @@ SET(Draft_SRCS
     Draft.py
     DraftTools.py
     DraftGui.py
+    DraftSnap.py
+    DraftTrackers.py
     WorkingPlane.py
     importDXF.py
     importOCA.py
