--- a/src/Mod/Draft/Makefile.am
+++ b/src/Mod/Draft/Makefile.am
@@ -11,6 +11,8 @@ data_DATA = \
 		Draft.py \
 		DraftTools.py \
 		DraftGui.py \
+		DraftSnap.py \
+		DraftTrackers.py \
 		WorkingPlane.py \
 		importOCA.py \
 		importDXF.py \
