+ added preliminary Arch Axis system
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5280 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Arch/Makefile.am
+++ b/src/Mod/Arch/Makefile.am
@@ -26,7 +26,8 @@ data_DATA = \
 		Wall.py \
 		SectionPlane.py \
 		Window.py \
-		Commands.py
+		Commands.py \
+		Axis.py
 
 CLEANFILES = $(BUILT_SOURCES)
 
