+ standardizing Arch module filenames
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5282 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Arch/CMakeLists.txt
+++ b/src/Mod/Arch/CMakeLists.txt
@@ -2,24 +2,24 @@
 SET(Arch_SRCS
     Init.py
     InitGui.py
-    Component.py
-    Cell.py
-    Wall.py
+    ArchComponent.py
+    ArchCell.py
+    ArchWall.py
     importIFC.py
     ifcReader.py
     IFC2X3_TC1.exp
     Arch_rc.py
     Arch.py
-    Building.py
-    Floor.py
-    Site.py
-    Structure.py
-    Commands.py
-    SectionPlane.py
+    ArchBuilding.py
+    ArchFloor.py
+    ArchSite.py
+    ArchStructure.py
+    ArchCommands.py
+    ArchSectionPlane.py
     importDAE.py
     importOBJ.py
-    Window.py
-    Axis.py
+    ArchWindow.py
+    ArchAxis.py
 )
 SOURCE_GROUP("" FILES ${Arch_SRCS})
 
