+ add patch for ortho view (j-dowsett)
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5310 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Drawing/Templates/Makefile.am
+++ b/src/Mod/Drawing/Templates/Makefile.am
@@ -2,6 +2,7 @@
 datadir = @datadir@/Mod/Drawing/Templates
 data_DATA = \
 		A3_Landscape.svg \
+		A4_Landscape.svg \
 		A4_Simple.svg
 
 EXTRA_DIST = \
