+ fix linker error
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5312 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Drawing/Gui/Makefile.am
+++ b/src/Mod/Drawing/Gui/Makefile.am
@@ -39,6 +39,7 @@ libDrawingGui_la_LIBADD   = \
 		@BOOST_SYSTEM_LIB@ \
 		-l@PYTHON_LIB@ \
 		-lxerces-c \
+		-lTKernel \
 		-lFreeCADBase \
 		-lFreeCADApp \
 		-lFreeCADGui \
