+ new Draft Snap
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5316 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Makefile.am
+++ b/src/Mod/Draft/Makefile.am
@@ -101,6 +101,7 @@ EXTRA_DIST = \
         Resources/icons/Draft_Construction.svg \
 		Resources/icons/Draft_Draft.svg \
 		Resources/icons/Draft_2DShapeView.svg \
+		Resources/icons/Draft_Cursor.svg \
         Resources/patterns/concrete.svg \
         Resources/patterns/cross.svg \
         Resources/patterns/line.svg \
