+ fix VS2010 build errors
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5328 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Makefile.am
+++ b/src/Mod/Draft/Makefile.am
@@ -74,8 +74,10 @@ EXTRA_DIST = \
         Resources/icons/Draft_Arc.svg \
         Resources/icons/Draft_BSpline.svg \
         Resources/icons/Draft_Circle.svg \
+        Resources/icons/Draft_Cursor.svg \
         Resources/icons/Draft_DelPoint.svg \
         Resources/icons/Draft_Dimension.svg \
+        Resources/icons/Draft_Dot.svg \
         Resources/icons/Draft_Downgrade.svg \
         Resources/icons/Draft_Drawing.svg \
         Resources/icons/Draft_Edit.svg \
@@ -85,6 +87,7 @@ EXTRA_DIST = \
         Resources/icons/Draft_Macro.svg \
         Resources/icons/Draft_Move.svg \
         Resources/icons/Draft_Offset.svg \
+        Resources/icons/Draft_Point.svg \
         Resources/icons/Draft_Polygon.svg \
         Resources/icons/Draft_Rectangle.svg \
         Resources/icons/Draft_Rotate.svg \
