--- a/src/Mod/Makefile.am
+++ b/src/Mod/Makefile.am
@@ -1,5 +1,5 @@
 #SUBDIRS=Part Mesh Points Raytracing Image Drawing Complete Draft Test TemplatePyMod
-SUBDIRS=Points Complete Draft Test TemplatePyMod Web Start Idf Arch Surfaces
+SUBDIRS=Points Complete Draft Test TemplatePyMod Web Start Idf Arch Surfaces Ship
 
 #if HAVE_OPENCV
 SUBDIRS += Image
