+ implement primitive dialog as task panel
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5365 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -58,6 +58,7 @@ set(PartGui_UIC_SRCS
     DlgPartImportIges.ui
     DlgPartImportStep.ui
     DlgPrimitives.ui
+    Location.ui
     DlgRevolution.ui
     DlgSettings3DViewPart.ui
     DlgSettingsGeneral.ui
@@ -104,6 +105,7 @@ SET(PartGui_SRCS
     DlgPrimitives.cpp
     DlgPrimitives.h
     DlgPrimitives.ui
+    Location.ui
     DlgRevolution.cpp
     DlgRevolution.h
     DlgRevolution.ui
