0000555: 3D navigation using a two-button laptop touchpad
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5373 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -558,6 +558,7 @@ SET(View3D_CPP_SRCS
     InventorNavigationStyle.cpp
     CADNavigationStyle.cpp
     BlenderNavigationStyle.cpp
+    TouchpadNavigationStyle.cpp
     SplitView3DInventor.cpp
     View.cpp
     View3DInventor.cpp
