+ add GUI command for addExternal in the Sketcher
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5377 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Sketcher/Gui/Resources/Makefile.am
+++ b/src/Mod/Sketcher/Gui/Resources/Makefile.am
@@ -1,10 +1,10 @@
 noinst_LTLIBRARIES=libResources.la
 
 BUILT_SOURCES=\
-		qrc_Sketcher.cpp 
+		qrc_Sketcher.cpp
 
 nodist_libResources_la_SOURCES=\
-		qrc_Sketcher.cpp 
+		qrc_Sketcher.cpp
 
 EXTRA_DIST = \
 icons/Constraint_PointOnObject.svg \
@@ -70,6 +70,7 @@ icons/Constraint_PointOnObject.svg \
 		icons/Sketcher_CreateText.svg \
 		icons/Sketcher_DraftLine.svg \
 		icons/Sketcher_Trimming.svg \
+		icons/Sketcher_External.svg \
 		icons/Sketcher_LeaveSketch.svg \
 		icons/Sketcher_NewSketch.svg \
 		icons/Sketcher_Sketch.svg \
